# ocw

./: Cargo.toml  rust-toolchain.toml
.github/workflows/: release.yml
cloud/: Cargo.toml
file_path/: Cargo.toml
file_path/src/: lib.rs
node/: Cargo.toml
node/src/: service.rs
pallets/bucket-feature/: Cargo.toml
pallets/bucket-feature/src/: lib.rs
pallets/cloud-api/: Cargo.toml
pallets/cloud-api/src/: lib.rs
pallets/cloud-bucket/: Cargo.toml  content.json
pallets/cloud-bucket/src/: lib.rs
pallets/cloud_mod/: Cargo.toml
pallets/cloud_mod/src/: lib.rs
pallets/create-buckets/: Cargo.toml
pallets/create-buckets/src/: cloud.rs  lib.rs
pallets/file-upload/: Cargo.toml
pallets/file-upload/src/: lib.rs
pallets/ocw/: Cargo.toml
pallets/storage/: Cargo.toml
pallets/store-words/: Cargo.toml
pallets/store-words/src/: lib.rs
pallets/user/: Cargo.toml
pallets/user/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
